:bug: fix(events): fix events endpoint and added overflow to events (#41)

--- a/components/admin/notifications/Notifications.module.scss
+++ b/components/admin/notifications/Notifications.module.scss
@@ -23,3 +23,8 @@
   border: 1px solid;
   min-height: 60vh;
 }
+
+.notificationContainer {
+  max-height: 60vh;
+  overflow-y: auto;
+}
